--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 	justify-content: center;
 	align-content: center;
 	grid-template-columns: repeat(3, 20vh);
-  	grid-template-rows: repeat(3, 20vh);
+	grid-template-rows: repeat(3, 20vh);
 	grid-gap: 2px;
 	margin: 20px 0;
 }
@@ -31,7 +31,7 @@ body {
 .cell {
 	padding: 0;
 	margin: 0;
-	border: 1.5vh solid #181818;
+	border: 1.5vh dashed #3366FF;
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
@@ -45,7 +45,9 @@ body {
 	background-image: url('./assets/cross.png');
 }
 
-#A1, #A2, #A3 {
+#A1,
+#A2,
+#A3 {
 	border-top: none;
 }
 
@@ -65,7 +67,9 @@ body {
 	border-right: none;
 }
 
-#C1, #C2, #C3 {
+#C1,
+#C2,
+#C3 {
 	border-bottom: none;
 }
 
